# tersedecompress-python

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/tersedecompress/: __init__.py  __main__.py  base.py  block_reader.py  constants.py  core.py  file.py  header.py  pack.py  spack.py
tests/: conftest.py  test_decompress.py  test_edge_cases.py  test_file_api.py  test_spooled.py  test_streaming.py
